// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests with <GifExpertApp /> should render GifExpertApp correctly 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCat={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Tests with <GifExpertApp /> should show a list of categories 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCat={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Bad Bunny"
      key="Bad Bunny"
    />
    <GifGrid
      category="Ibai"
      key="Ibai"
    />
  </ol>
</Fragment>
`;
